--- a/templates/portal/index.html
+++ b/templates/portal/index.html
@@ -2,27 +2,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% include "portal/layout/head.html" %}
+    {% block page_head %}
+    <title>Portal - Bootstrap 5 Admin Dashboard Template For Developers</title>
 
+    <!-- Meta -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Portal - Bootstrap 5 Admin Dashboard Template For Developers">
+    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+    <link rel="shortcut icon" href="{% static 'portal/assets/favicon.ico' %}">
+
+    <!-- FontAwesome JS-->
+    <script defer src="{% static 'portal/assets/plugins/fontawesome/js/all.min.js' %}"></script>
+
+    <!-- App CSS -->
+    <link id="theme-style" rel="stylesheet" href="{% static 'portal/assets/css/portal.css' %}">
+    {% endblock %}
 </head>
 
 <body class="app">
     <!-- app-header start -->
     <header class="app-header fixed-top">
-        {% include "portal/layout/app_header.html" %}
-        {% include "portal/layout/app_sidepanel.html" %}
+        {% include "portal/layout/header.html" %}
+        {% include "portal/layout/sidepanel.html" %}
     </header>
     <!-- app-header start -->
 
     <!-- app-wrapper start -->
     <div class="app-wrapper">
-        {% include "portal/layout/app_content.html" %}
-        {% include "portal/layout/app_footer.html" %}
+
+        {% block page_content %}
+            {% include "portal/layout/content.html" %}
+        {% endblock %}
+
+        {% block page_footer %}
+        {% include "portal/layout/footer.html" %}
+        {% endblock %}
     </div>
     <!--//app-wrapper end-->
 
-        {% include "portal/layout/js_footer.html" %}
+        {% block page_javascript %}
+        <!-- Javascript -->
+        <script src="{% static 'portal/assets/plugins/popper.min.js' %}"></script>
+        <script src="{% static 'portal/assets/plugins/bootstrap/js/bootstrap.min.js' %}"></script>
 
+        <!-- Charts JS -->
+        <script src="{% static 'portal/assets/plugins/chart.js/chart.min.js' %}"></script>
+        <script src="{% static 'portal/assets/js/index-charts.js' %}"></script>
+
+        <!-- Page Specific JS -->
+        <script src="{% static 'portal/assets/js/app.js' %}"></script>
+        {% endblock %}
 </body>
 </html>
 
