--- a/eduser/templates/account/password_change.html
+++ b/eduser/templates/account/password_change.html
@@ -1,16 +1,26 @@
-{% extends "account/base.html" %}
+{% extends "portal/index.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_description %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+{% block page_content %}
+    <h1 class="app-page-title">{% trans "Change Password" %}</h1>
+    <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+                <h3 class="mb-3">Welcome, developer!</h3>
+                <div class="row gx-5 gy-3">
+                    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" name="action">{% trans "Change Password" %}</button>
+                        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                    </form>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
 {% endblock %}
