login, logout, password change and password reset templates fixed

--- a/eduser/templates/account/password_change.html
+++ b/eduser/templates/account/password_change.html
@@ -1,4 +1,4 @@
-{% extends "portal/index.html" %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
 
@@ -19,7 +19,6 @@
                         <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
                     </form>
                 </div>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         </div>
     </div>
