--- a/eduser/templates/account/password_reset.html
+++ b/eduser/templates/account/password_reset.html
@@ -4,21 +4,30 @@
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block head_description %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
+{% block page_content %}
+<h1 class="app-page-title">{% trans "Password Reset" %}</h1>
+        <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
 
-    <h1>{% trans "Password Reset" %}</h1>
+
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+                <h5 class="mb-5">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</h5>
+                <div class="row gx-5 gy-3">
+                    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <input type="submit" value="{% trans 'Reset My Password' %}" />
+                    </form>
+                </div>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+                </div>
+        </div>
+    </div>
 {% endblock %}
