--- a/eduser/templates/account/password_reset_done.html
+++ b/eduser/templates/account/password_reset_done.html
@@ -4,13 +4,21 @@
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block head_description %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
-    
+{% block page_content %}
+<h1 class="app-page-title">{% trans "Password Reset" %}</h1>
+
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+            <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+
+    <h5 class="mb-5">{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam
+        folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</h5>
+                    </div>
+        </div>
+    </div>
 {% endblock %}
