--- a/templates/portal/index.html
+++ b/templates/portal/index.html
@@ -33,6 +33,9 @@
     <div class="app-wrapper">
         <div class="app-content pt-3 p-md-3 p-lg-4">
 		    <div class="container-xl">
+
+            {% block page_message %}{% endblock %}
+
             {% block page_content %}
                 {% include "portal/layout/content.html" %}
             {% endblock %}
