--- a/eduser/templates/account/account_inactive.html
+++ b/eduser/templates/account/account_inactive.html
@@ -3,9 +3,19 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
+{% block head_description %}{% trans "Account Inactive" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+{% block page_content %}
+    <h1 class="app-page-title">{% trans "Account Inactive" %}</h1>
 
+        <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+                <div class="row gx-5 gy-3">
 <p>{% trans "This account is inactive." %}</p>
+                                    </div>
+
+            </div>
+        </div>
+    </div>
 {% endblock %}
