--- a/eduser/templates/account/email.html
+++ b/eduser/templates/account/email.html
@@ -3,9 +3,15 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
+{% block head_description %}{% trans "Sign In" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "E-mail Addresses" %}</h1>
+{% block page_content %}
+    <h1 class="app-page-title">{% trans "E-mail Addresses" %}</h1>
+
+         <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+                <div class="row gx-5 gy-3">
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
@@ -53,7 +59,11 @@
         <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
     </form>
   {% endif %}
+                </div>
 
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 
