--- a/eduser/templates/account/email_confirm.html
+++ b/eduser/templates/account/email_confirm.html
@@ -4,11 +4,15 @@
 {% load account %}
 
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
+{% block head_description %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
-{% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
-
+{% block page_content %}
+    <h1 class="app-page-title">{% trans "Confirm E-mail Address" %}</h1>
+        <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+                <div class="row gx-5 gy-3">
 {% if confirmation %}
 
 {% user_display confirmation.email_address.user as user_display %}
@@ -27,5 +31,9 @@
 <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
 
 {% endif %}
+                                    </div>
 
+            </div>
+        </div>
+    </div>
 {% endblock %}
