--- a/eduser/templates/account/password_reset_from_key.html
+++ b/eduser/templates/account/password_reset_from_key.html
@@ -2,10 +2,16 @@
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_description %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+{% block page_content %}
+    <h1 class="app-page-title">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+    <h1 class="app-page-title">{% trans "Account Inactive" %}</h1>
 
+        <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+                <div class="row gx-5 gy-3">
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
         <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
@@ -16,4 +22,9 @@
             <input type="submit" name="action" value="{% trans 'change password' %}"/>
         </form>
     {% endif %}
+                                        </div>
+
+            </div>
+        </div>
+    </div>
 {% endblock %}
