--- a/eduser/templates/account/password_reset_from_key_done.html
+++ b/eduser/templates/account/password_reset_from_key_done.html
@@ -2,8 +2,20 @@
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+        <h1 class="app-page-title">{% trans "Change Password" %}</h1>
+
+
+            <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+                <div class="row gx-5 gy-3">
     <p>{% trans 'Your password is now changed.' %}</p>
+                                    </div>
+
+            </div>
+        </div>
+    </div>
 {% endblock %}
