--- a/eduser/templates/account/password_set.html
+++ b/eduser/templates/account/password_set.html
@@ -3,13 +3,24 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
+{% block head_description %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+{% block page_content %}
+        <h1 class="app-page-title">{% trans "Set Password" %}</h1>
 
+        <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+                <div class="row gx-5 gy-3">
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+    </form>                                    </div>
+
+            </div>
+        </div>
+    </div>
+
+
 {% endblock %}
