--- a/eduser/templates/account/signup_closed.html
+++ b/eduser/templates/account/signup_closed.html
@@ -3,9 +3,18 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
+{% block head_description %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
-
+{% block page_content %}
+        <h1 class="app-page-title">{% trans "Sign Up Closed" %}</h1>
+        <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+                <div class="row gx-5 gy-3">
 <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+                          </div>
+
+            </div>
+        </div>
+    </div>
 {% endblock %}
