--- a/eduser/templates/account/verification_sent.html
+++ b/eduser/templates/account/verification_sent.html
@@ -3,10 +3,20 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block head_description %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
+{% block page_content %}
 
+    <h1 class="app-page-title">{% trans "Verify Your E-mail Address" %}</h1>
+
+        <div class="app-card alert alert-dismissible shadow-sm mb-4 border-left-decoration" role="alert">
+        <div class="inner">
+            <div class="app-card-body p-3 p-lg-4">
+                <div class="row gx-5 gy-3">
     <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification e-mail in your main inbox, check your spam folder. Please contact us if you do not receive the verification e-mail within a few minutes.{% endblocktrans %}</p>
+                                    </div>
 
+            </div>
+        </div>
+    </div>
 {% endblock %}
